--- a/index.html
+++ b/index.html
@@ -89,21 +89,21 @@ blockquote { font-style: italic; }
 <style>
   @font-face {
       font-family: 'Cinzel';
-      src: url('https://clairvoyancemedium.github.io/snelle-en-betrouwbare-waarzeggerij-via-e-mail.github.io/Cinzel-Regular.woff2') format('woff2'),
-           url('https://clairvoyancemedium.github.io/snelle-en-betrouwbare-waarzeggerij-via-e-mail.github.io/Cinzel-Regular.woff') format('woff');
+      src: url('https://clairvoyancemedium.github.io/Consultation_de_voyance_par_email_pas_chere.github.io/Cinzel-Regular.woff2') format('woff2'),
+           url('https://clairvoyancemedium.github.io/Consultation_de_voyance_par_email_pas_chere.github.io/Cinzel-Regular.woff') format('woff');
       font-weight: 400;
       font-style: normal;
   }
 
   @font-face {
       font-family: 'Playfair Display';
-      src: url('https://clairvoyancemedium.github.io/snelle-en-betrouwbare-waarzeggerij-via-e-mail.github.io/PlayfairDisplay-Regular.woff2') format('woff2'),
-           url('https://clairvoyancemedium.github.io/snelle-en-betrouwbare-waarzeggerij-via-e-mail.github.io/PlayfairDisplay-Regular.woff') format('woff');
+      src: url('https://clairvoyancemedium.github.io/Consultation_de_voyance_par_email_pas_chere.github.io/PlayfairDisplay-Regular.woff2') format('woff2'),
+           url('https://clairvoyancemedium.github.io/Consultation_de_voyance_par_email_pas_chere.github.io/PlayfairDisplay-Regular.woff') format('woff');
       font-weight: 400;
       font-style: normal;
   }
 
-  /* Toepassing van de lettertypen */
+  /* Application des polices */
   body {
       font-family: 'Cinzel', serif;
   }
@@ -113,6 +113,7 @@ blockquote { font-style: italic; }
   }
 </style>
 
+    
     <link rel="preload" as="image" href="https://i.imgur.com/GmyGlKk.webp" type="image/webp" imagesizes="450px">
     <meta name="theme-color" content="#000">
     <meta name="robots" content="index, follow">
